--- a/buttercup/specimen/templates/edit.html
+++ b/buttercup/specimen/templates/edit.html
@@ -116,7 +116,7 @@
 			function(){
 				if($(this).is(':checked')){
 					$jcropper = $.Jcrop('#edge',{
-						aspectRatio: 1,
+//						aspectRatio: 1,
 						onSelect: function(c){console.log(c)},
 						bgOpacity: 0.2
 					});	
