--- a/buttercup/specimen/templates/edit.html
+++ b/buttercup/specimen/templates/edit.html
@@ -92,7 +92,7 @@
 		$('#id_hi').val($('#slider-range').slider('values', 1));
 		
 		$('#dim').add($('#measure')).attr('checked', false)
-		$('#vis').attr('checked', !!$('#edge:visible').length)
+		$('#vis').attr('checked', !!$('#edge').length)
 		
 		$('#vis').change(
 			function(){
