--- a/buttercup/specimen/templates/app-links.html
+++ b/buttercup/specimen/templates/app-links.html
@@ -1,5 +1,5 @@
 <li>
-	<a href="{% url buttercup.specimen.views.list %}">list</a>
+	<a href="{% url buttercup.specimen.views.specimen_list %}">list</a>
 </li>
 <li>
 	<a href="{% url buttercup.specimen.views.new %}">new specimen</a>
