--- a/buttercup/specimen/templates/edit.html
+++ b/buttercup/specimen/templates/edit.html
@@ -185,7 +185,7 @@
 					if (SCALE.length >= 2){
 						SCALE = [];
 					}
-					SCALE.append({'x':x,'y':y})
+					SCALE.push({'x':x,'y':y})
 			        $('#scale').text("X: " + x + " Y: " + y);
 					if(2 == SCALE.length){
 						$('#capture').attr('checked', false).change();
