--- a/buttercup/specimen/templates/edit.html
+++ b/buttercup/specimen/templates/edit.html
@@ -179,7 +179,7 @@
 		}
 		$('#capture').change(function(){
 			if($(this).is(':checked')){
-				$('#viewport').css('cursor','cross-hair').click(function(e){
+				$('#viewport').css('cursor','crosshair').click(function(e){
 			        var x = e.pageX - this.offsetLeft;
 			        var y = e.pageY - this.offsetTop;
 					if (SCALE.length >= 2){
