--- a/buttercup/specimen/templates/edit.html
+++ b/buttercup/specimen/templates/edit.html
@@ -196,11 +196,13 @@
 				if(2 == SCALE.length){
 					pixels = distance(SCALE[0].x,SCALE[0].y,SCALE[1].x,SCALE[1].y)
 					scale = pixels/20
-					// refresh radius as needed
 					// store in db
 					url = '{% url store_scale specimen_id=specimen.pk %}'
 					$.post(url, {'scale': scale}, function(data, status){
 						$('#scale').text(''+scale+' pix/mm');
+						
+						// Todo: build an ajax endpoint to update ALL measurements
+						// refresh radius as needed
 					});
 				} else {
 					SCALE = []
